--- a/intimacy/src/main/resources/application.properties
+++ b/intimacy/src/main/resources/application.properties
@@ -1,5 +1,31 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/intimacy?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3333/intimacy?useSSL=false&allowPublicKeyRetrieval=true&type=MyISAM
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
+spring.security.user.name=hari
+spring.security.user.password=hari
+spring.security.user.roles=manager 
+
+
+spring.datasource.initialization-mode=always
+spring.servlet.multipart.max-file-size=1MB
+allowed.file.types=image/jpeg,image/png
+default.page.size=3
+spring.resources.static-locations=classpath:/static/,file:./profileImages/
+
+
+
+
+
+spring.profiles.active=prod
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=auditevents,beans,caches,conditions,scheduledtasks,mappings,metrics
+management.endpoint.health.show-details=always
+logging.file=logs/application.log
