--- a/intimacy/pom.xml
+++ b/intimacy/pom.xml
@@ -52,6 +52,43 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-core 
+			<dependency> <groupId>org.springframework.social</groupId> <artifactId>spring-social-core</artifactId> 
+			<version>1.1.4.RELEASE</version> </dependency> https://mvnrepository.com/artifact/org.springframework.social/spring-social-web 
+			<dependency> <groupId>org.springframework.social</groupId> <artifactId>spring-social-web</artifactId> 
+			<version>1.1.4.RELEASE</version> </dependency> Thanks for using https://jar-download.com 
+			<dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-autoconfigure</artifactId> 
+			<version>1.5.8.RELEASE</version> </dependency> https://mvnrepository.com/artifact/org.springframework.social/spring-social-facebook 
+			<dependency> <groupId>org.springframework.social</groupId> <artifactId>spring-social-facebook</artifactId> 
+			<version>2.0.3.RELEASE</version> </dependency> https://mvnrepository.com/artifact/org.springframework.social/spring-social-google 
+			<dependency> <groupId>org.springframework.social</groupId> <artifactId>spring-social-google</artifactId> 
+			<version>1.0.0.RELEASE</version> </dependency> -->
+
+
+
 	</dependencies>
 
 	<build>
@@ -59,6 +96,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
